# most

./: .clang-format  .gitignore  .nvimrc  CMakeLists.txt  Dockerfile  HISTORY  README.md  bootstrap.sh  configure  genman.sh  makefile.in
.github/workflows/: docker-build-and-test.yml  docker-image.yml
docs/: doc-gend.md  doc-man-commands.md  doc-man-doe.md  doc-man-opt.md  doc-man-rsm.md  doc-most.md  doc-xml.md
docs/meetings/20120131/: makefile  presentation.md
docs/roadmap/: Makefile  beamercolorthemerekj.sty  beamerinnerthemefancy.sty  beamerouterthemerekj.sty  beamerthemerekj.sty  roadmap.snm  roadmap.tex
docs/tools/: template.css
docs/tools/cman/: Makefile  mmd.sed  tmp.man
docs/tools/mmd/Documentation/: MultiMarkdown User's Guide.html
docs/tools/mmd/XSLT/: beamer.xslt  memoir-xelatex.xslt  memoir.xslt  my_latex.xslt  my_latex.xslt.in  my_xelatex.xslt  my_xhtml2latex.xslt  xhtml2latex.xslt
examples/dtlz/: dtlz.py  dtlz_dse.xml  dtlz_fullsearch.scr  readme.md
examples/gcc/: CMakeLists.txt  gcc_ds.xml  gcc_ds.xml.in  gcc_full_dse.scr  gcc_most.py  linpack.c  readme.md
examples/mosa/: ff_factorial_test.msh  mosa_test.msh
examples/mpeg_sesc/: launch_mpeg_test.sh  launch_mpeg_test_rsm.sh  mpeg_optimizer.scr  mpeg_optimizer_nn.scr  mpeg_optimizer_rbf.scr  mpeg_optimizer_rsmc.scr
examples/ro_sesc/: full_sesc_ro.scr
examples/vex/: .gitignore  design_space.xml  makefile
examples/vex/databases/: FULL.db
examples/vex/gnuplot/: override.scr
examples/vex/most/: plot-effect.scr  plot-level.scr
gpl/: CMakeLists.txt  gpl_xdr_api.cc  gpl_xdr_api.h  makefile.in  normal.cc  rand.cc  regressor.cc  sh_i.cc
gpl/nn/: CMakeLists.txt  README  cascade.cc  makefile.in
gpl/rbf/: CMakeLists.txt  README  bvp.cpp  bvp.hpp  ddm.cpp  ddm.hpp  diff_op.cpp  diff_op.hpp  error.cpp  error.hpp  estimatorRBF.cpp  func.cpp  func.hpp  interpolator.cpp  interpolator.hpp  interpolatorRBF.cpp  linalg.cpp  linalg.hpp  makefile.in  rbf.cpp  rbf.hpp  trainerRBF.cpp  utils.cpp  utils.hpp
gpl/splines/: INSTALL  makefile.in
gpl/splines/src/: CMakeLists.txt  converter.cc  converter.hpp  parameters.cc  parameters.h  r_wrapper.cc  r_wrapper.hpp  rsm.cc  spline_script.cc  spline_script.hpp
man/: special_set.man.src  special_set_constraint.man.src  special_set_function.man.src  special_set_metric.man.src  special_set_objective.man.src
overrides/most/filesdot/neovim/.config/nvim/: ale.vim
schemas/: CMakeLists.txt  multicube_design_space_def.xsd
scripts/legacy/: m3_cdb.in
scripts/sdk/: create_makefile.in  makefile.in
scripts/sdk_xml/: libxml_m3.cc  libxml_m3.h  xml_config  xml_stub.py  xml_wrapper
scripts/tools/: indent_source  license.txt  mk  put_license  put_license_on_all_files
src/: CMakeLists.txt  config.h.in  m3_scan.ll  most_license_public_key.h  st_arg.cc  st_arg.h  st_ast.cc  st_ast.h  st_command_list.h  st_commands.cc  st_commands.h  st_common_utils.cc  st_common_utils.h  st_companion_metrics.cc  st_companion_metrics.h  st_conv.cc  st_conv.h  st_database.cc  st_database.h  st_design_space.cc  st_design_space.h  st_doe.h  st_doe_utils.cc  st_doe_utils.h  st_driver.h  st_driver_utils.cc  st_driver_utils.h  st_env.cc  st_env.h  st_error.h  st_exception.cc  st_exception.h  st_gen_man.cc  st_grammar.yy  st_job_dispatcher.cc  st_job_dispatcher.h  st_list.cc  st_list.h  st_lm.cc  st_lm.h  (+41 more)
src/doe/: CMakeLists.txt  libst_box_behnken.cc  libst_ccd_fc.cc  libst_fractional_factorial.cc  libst_full_factorial.cc  libst_full_factorial_extended.cc  libst_full_search.cc  libst_neighbor.cc  libst_plackett_burman.cc  libst_random.cc  libst_random_effect.cc  libst_replicate.cc  libst_scrambled_doe.cc
src/drivers/: CMakeLists.txt  libst_dtlz.cc  libst_generic.cc  libst_sesc.cc  libst_test.cc  libst_wattch.cc  libst_xml.cc  libst_xml.h
src/optimizers/: CMakeLists.txt  libst_mosa.cc  libst_nsgaii.cc  libst_parallel_doe.cc  libst_parallel_pareto_doe.cc  libst_parallel_steepest_descent.cc
tests/: CMakeLists.txt  do_tests.in  do_tests_sim.in  most_test.sh.in
tests/test1/: test.scr  test_output.ref
tests/test10/: test.scr  test10_output.ref  test_db.ref
tests/test12/: test12.scr  test12_output.ref
tests/test13/: test.scr  test_output.ref
tests/test14/: test14.scr
tests/test15/: test15.scr  test_output.ref
tests/test16/: test16.scr  test_output.ref
tests/test17/: test.scr  test15_output.ref  test_output.ref
tests/test2/: test.scr  test_output.ref
tests/test3/: test3.scr  test3_output.ref  test3_output_db.txt.ref
tests/test4/: test.scr  test_output.ref
tests/test5/: test5.scr  test5_output.ref
tests/test6/: test.scr  test_output.ref
tests/test7/: test.scr  test_output.ref
tests/test8/: test.scr  test8.scr  test_db.ref  test_output.ref
tests/test9/: test9.scr  test_output.ref
tests/test_sim_1/: f1.db  f2.db  fft.mips  test_sesc.scr  test_sesc_out.ref
tests/testx1/: multicube_design_space_test.xml.in  test_output.ref
tests/testx3/: test_output.ref
tests/testx4/: CMakeLists.txt
tests/xml/: CMakeLists.txt  do_tests.in  multicube_design_space_test_R1.4.xml.in  multicube_design_space_test_dump.xml.in  multicube_design_space_test_err.xml.in  stub.py  stub_dump.py  stub_error.py  stub_test.py  test2_output.ref  test4_output.ref  test_4.scr
validation/: CMakeLists.txt  full_sesc_ro_rsm_validation.scr.in  meth_design_space.scr.in  mosa_validation.scr.in  nsgaii_validation.scr.in  respir_validation.scr.in  validate_optimizers.in  validate_rsm.in
